--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ homepage = "https://github.com/advancedresearch/poi"
 
 [dependencies]
 piston_meta = "1.0.0"
+
+[dev-dependencies]
+read_token = "1.0.0"
