Added source examples for 3D axis rotation
- Exclude “source/*”

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/advancedresearch/poi.git"
 homepage = "https://github.com/advancedresearch/poi"
+exclude = ["source/*"]
 
 [dependencies]
 piston_meta = "1.0.0"
